# SharewoodAutomator

./: .env-example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  README.md  UPDATE_GUIDE.md  lint-fix.sh  lint.sh  main.py  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: python-packages.yml
.github/workflows/: python-package.yml
sharewoodautomator/: __init__.py  __main__.py  config.py  exceptions.py  py.typed  sharewoodautomator.py  sharewoodlogging.py  sharewoodsearch.py  sharewoodsearchcriteria.py  sharewoodselectors.py  sharewoodtorrent.py  sharewoodtorrentscraper.py
tests/: conftest.py  test_sharewoodautomator.py  test_sharewoodlogging.py  test_sharewoodsearch.py  test_sharewoodtorrent.py
tests/sharewoodautomator/: test_mock_login.py
