[metadata]
name = sharewoodautomator
version = attr: sharewoodautomator.__version__
author = ShareWoodAutomator
author_email = lounis.bou@gmail.com
description = A Python library that automates interactions with ShareWood.tv
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LounisBou/sharewoodautomator
project_urls =
    Bug Reports = https://github.com/LounisBou/sharewoodautomator/issues
    Source = https://github.com/LounisBou/sharewoodautomator
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
keywords = sharewood, torrent, automation, scraper, downloader

[options]
packages = find:
python_requires = >=3.6
install_requires =
    selenium>=4.0.0
    beautifulsoup4>=4.10.0
    python-dotenv>=0.19.0
    lxml>=4.6.0
    urllib3>=1.26.0
    webdriver-manager>=3.5.0
package_dir =
    = .

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    sharewoodautomator = sharewoodautomator.__main__:main

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.12.0
    black>=21.5b2
    isort>=5.9.0
    mypy>=0.812
    flake8>=3.9.0
    pre-commit>=2.13.0
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.2

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,venv,.env,env
ignore = E203,W503,E501,W293,W291,D100,D200,D202,D205,D210,D400,D401,E261,C901
max-complexity = 12
per-file-ignores =
    __init__.py: F401

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*